--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run lint && mkdir -p dist && tsc -p tsconfig.json",
+    "build": "rm -rf dist && npm run lint && mkdir -p dist && tsc -p tsconfig.json",
     "build:watch": "mkdir -p dist && tsc -p tsconfig.json --watch",
     "lint": "tslint -p tsconfig.json"
   },
