Refactor Container to use aurelia container instead of extending it

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "target": "es5",
         "jsx": "react",
         "moduleResolution": "node",
+        "module": "esnext",
         "allowJs": true,
         "noImplicitAny": false,
         "lib": [
