Use commonjs modules, import ts helpers only once instead of inlining in each file.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "aurelia-dependency-injection": "^1.4.2",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^1.9.3"
   }
 }
