--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
         "target": "es5",
         "jsx": "react",
         "moduleResolution": "node",
-        "module": "esnext",
-        "allowJs": true,
+        "module": "commonjs",
         "noImplicitAny": false,
+        "importHelpers": true,
         "lib": [
             "es6",
             "dom"
