--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "target": "es5",
         "jsx": "react",
         "moduleResolution": "node",
-        "module": "commonjs",
+        "module": "esnext",
         "noImplicitAny": false,
         "importHelpers": true,
         "lib": [
