--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "TS_NODE_PROJECT=tsconfig.test.json mocha -r ts-node/register tests/**/*.test.ts",
+    "test:watch": "TS_NODE_PROJECT=tsconfig.test.json mocha -r ts-node/register --watch --watch-extensions ts,tsx tests/**/*.test.ts",
     "build": "rm -rf dist && npm run lint && mkdir -p dist && tsc -p tsconfig.json",
     "build:watch": "mkdir -p dist && tsc -p tsconfig.json --watch",
     "lint": "tslint -p tsconfig.json"
@@ -12,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/mocha": "^5.2.6",
     "@types/react": "^16.8.16",
+    "assert": "^1.4.1",
+    "mocha": "^6.1.4",
+    "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   },
