Create corresponding ts declaration files when building.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "outDir": "./dist/",
         "target": "es5",
         "jsx": "react",
+        "declaration": true,
         "moduleResolution": "node",
         "module": "commonjs",
         "noImplicitAny": false,
