--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@symbiotic/state",
-  "version": "1.0.0",
+  "name": "@symbiotic/green-state",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "scripts": {
     "test": "TS_NODE_PROJECT=tsconfig.test.json mocha -r ts-node/register tests/**/*.test.ts",
     "test:watch": "TS_NODE_PROJECT=tsconfig.test.json mocha -r ts-node/register --watch --watch-extensions ts,tsx tests/**/*.test.ts",
     "build": "rm -rf dist && npm run lint && mkdir -p dist && tsc -p tsconfig.json",
     "build:watch": "mkdir -p dist && tsc -p tsconfig.json --watch",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "prepublishOnly": "npm run test && npm run lint && npm run build"
   },
   "keywords": [],
   "author": "",
