--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:watch": "TS_NODE_PROJECT=tsconfig.test.json mocha -r ts-node/register --watch --watch-extensions ts,tsx tests/**/*.test.ts",
     "build": "rm -rf dist && npm run lint && mkdir -p dist && tsc -p tsconfig.json",
     "build:watch": "mkdir -p dist && tsc -p tsconfig.json --watch",
+    "docs:build": "rm -rf docs && typedoc --out docs --exclude '**/index.ts' src",
     "lint": "tslint -p tsconfig.json",
     "prepublishOnly": "npm run test && npm run lint && npm run build"
   },
@@ -20,6 +21,7 @@
     "mocha": "^6.1.4",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
+    "typedoc": "^0.14.2",
     "typescript": "^3.4.5"
   },
   "peerDependencies": {
