--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "tslint -p tsconfig.json",
     "prepublishOnly": "npm run test && npm run lint && npm run build"
   },
-  "keywords": [],
+  "keywords": ["state", "react", "ioc", "inversion of control", "di", "dependency injection"],
   "author": "Symbiotic Labs <team@symbioticlabs.io> (https://www.symbioticlabs.io)",
   "license": "MIT",
   "devDependencies": {
