--- a/package.json
+++ b/package.json
@@ -30,7 +30,13 @@
     "@types/mocha": "^5.2.6",
     "@types/react": "^16.8.16",
     "assert": "^1.4.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jsdom": "^15.1.1",
     "mocha": "^6.2.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-test-renderer": "^16.9.0",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typedoc": "^0.15.0",
