--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mocha": "^6.2.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "sinon": "^7.5.0",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typedoc": "^0.15.0",
